--- a/miniprogram/pages/bill/bill.wxss
+++ b/miniprogram/pages/bill/bill.wxss
@@ -115,3 +115,13 @@
 .historyBill:last-child{
   padding-bottom: 30rpx;
 }
+.calendar{
+  position: fixed;
+  width: 100%;
+  z-index:10;
+  top: 280rpx;
+  left: 0;
+}
+.calendar view{
+  padding: 0;
+}
