--- a/miniprogram/pages/billHistory/billHistory.wxss
+++ b/miniprogram/pages/billHistory/billHistory.wxss
@@ -1,1 +1,89 @@
 /* pages/billHistory/billHistory.wxss */
+.balanceText{
+  padding-right: 30rpx;
+  font-size:26rpx;
+}
+.balance{
+  display: flex;
+  justify-content: center;
+}
+.year{
+  height: 40rpx;
+  line-height: 40rpx;
+}
+.year text{
+  font-size:26rpx;
+  padding-right: 50rpx;
+  position: relative;
+}
+.year text::after{
+  content:'';
+  display:block;
+  position: absolute;
+  right: 25rpx;
+  top: 45%;
+  width: 0;
+  height: 0;
+  border:10rpx solid transparent;
+  border-top:14rpx solid #fff
+}
+.balanceVal{
+  font-size: 48rpx;
+}
+.detail{
+  display: flex;
+  justify-content: center;
+  height: 60rpx;
+}
+.income,.expanse{
+  display: flex;
+  justify-content: center;
+  padding:0 40rpx; 
+}
+.income{
+  position: relative;
+}
+.income::after{
+  content:'';
+  position: absolute;
+  width: 2rpx;
+  height: 30%;
+  top: 55%;
+  transform: translateY(-50%);
+  right: 0;
+  background-color: #fff;
+}
+.detail .text{
+  font-size:24rpx;
+  line-height: 60rpx;
+}
+.val{
+  padding-left: 20rpx;
+  line-height: 60rpx;
+}
+.content view{
+  display: flex;
+  border-bottom: 2rpx solid #C9C9C9;
+  font-size: 30rpx;
+  color:#ccc;
+  text-align: center;
+}
+.th text{
+  flex:1;
+  height: 60rpx;
+  line-height: 60rpx;
+}
+.td text{
+  flex:1;
+  height: 88rpx;
+  line-height: 88rpx;
+}
+.nomore{
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  height: 88rpx;
+  line-height: 88rpx;
+  font-size: 30rpx;
+  color:#B9D8FF;
+}
