--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,5 +1,5 @@
 /**app.wxss**/
-@import './asset/css/iconfont/iconfont.wxss';
+@import '/asset/css/iconfont/iconfont.wxss';
 .bg{
   background: linear-gradient(#98d6f9, #fff,#fff);
   z-index: -2;
@@ -10,4 +10,7 @@ text,view{
 }
 view,text{
   box-sizing: border-box;
+}
+.container{
+  background: linear-gradient(#B9D8FF, #fff);
 }
