--- a/miniprogram/pages/bill/bill.wxss
+++ b/miniprogram/pages/bill/bill.wxss
@@ -121,7 +121,28 @@
   z-index:10;
   top: 280rpx;
   left: 0;
+  transform-origin: 50% 0%;
 }
 .calendar view{
   padding: 0;
+}
+.show{
+  opacity: 0;
+  animation: showCalender 0.5s ease-out;
+  animation-fill-mode:forwards;
+  }
+.hide{
+  opacity: 1;
+  animation: hideCalender 0.5s ease-in;
+  animation-fill-mode:forwards;
+  }
+@keyframes showCalender
+{
+  from {opacity: 0;transform: scaleY(0);}
+  to {opacity: 1;transform: scaleY(1);}
+}
+@keyframes hideCalender
+{
+  from {opacity: 1;transform: scaleY(1);}
+  to {opacity: 0;transform: scaleY(0);}
 }
