--- a/miniprogram/pages/billAdd/billAdd.wxml
+++ b/miniprogram/pages/billAdd/billAdd.wxml
@@ -1,6 +1,6 @@
 <!--pages/billAdd/billAdd.wxml-->
 <view style="height:100%;overflow:hidden">
-  <headerNav>
+  <headerNav isBack="{{true}}">
     <view class="headerTab">
       <text class="{{active=='expanse'?'active':''}}" bindtap="isExpanse">支出</text>
       <text class="{{active=='income'?'active':''}}" bindtap="isIncome">收入</text>
@@ -13,7 +13,7 @@
       <view class="{{select=='category' ? 'select':''}}" data-select="category">
        <text class="iconfont icon-fenlei">分类</text>
         <text>{{active=='expanse'?'支出':'收入'}}>{{currentList[current].type}}</text></view>
-      <view class="{{'categoryList '+state1}}" wx:if="{{showCategory}}" data-select="category">
+      <view class="{{'categoryList '+state1}}" wx:if="{{showCategory}}" bindtap="stopCloseM" data-select="category">
         <view class="close" bindtap="closeList">
           <text class="clickArea">收起</text>
         </view>
@@ -23,7 +23,7 @@
             <view class="td">{{active=='expanse'?'支出':'收入'}}</view>
           </view>
           <view class="right">
-            <swiper vertical style="width:100%;height:100%" display-multiple-items="{{7}}" bindchange="categoryChange"
+            <swiper vertical style="width:100%;height:100%" display-multiple-items="{{7}}" bindchange="categoryChange" 
               current="{{current}}">
               <swiper-item wx:for="{{3}}" class="item" wx:key="index"></swiper-item>
               <swiper-item wx:for="{{currentList}}" wx:key="index"
@@ -40,7 +40,7 @@
         <text class="iconfont icon-bar_icon_shijian">时间</text>
         <text wx:if="{{selectMonth}}">{{format.formatDate(selectMonth+1)}}月{{format.formatDate(selectDay+1)}}日</text>
       </view>
-      <view class="{{'calendarList '+state2}}" wx:if="{{showCalendar}}" data-select="date">
+      <view class="{{'calendarList '+state2}}" wx:if="{{showCalendar}}" bindtap="stopCloseM" data-select="date">
         <view class="close">
           <text class="text">日期</text>
           <text class="clickArea" bindtap="closeList">收起</text>
@@ -78,6 +78,8 @@
         <input placeholder="..." data-select="message" bindblur="saveMsg"/>
       </view>
     </view>
+    <view class="save" bindtap="save">保存</view>
+    <view class="another" bindtap="createAnother">再记一笔</view>
   </view>
 </view>
 <wxs module="format">
