--- a/miniprogram/pages/weekPlan/weekPlan.wxss
+++ b/miniprogram/pages/weekPlan/weekPlan.wxss
@@ -1,1 +1,98 @@
 /* pages/weekPlan/weekPlan.wxss */
+.left image{
+  width: 172rpx;
+  height: 166rpx;
+}
+.header{
+  display: flex;
+  padding: 60rpx 40rpx;
+  color: #fff;
+}
+.right{
+  padding-left:30rpx;
+  padding-top: 20rpx;
+  font-size: 30rpx;
+  line-height: 60rpx;
+}
+.right>view{
+  display: flex;
+}
+.title{
+  text-align: center;
+  font-size: 40rpx;
+}
+.left{
+  position: relative;
+}
+.time{
+  position: absolute;
+  left:0;
+  top: 46rpx;
+  width: 172rpx;
+  height: 166rpx;
+  text-align: center;
+  font-size: 26rpx;
+  line-height: 30rpx;
+}
+.swiper{
+  height: 650rpx;
+}
+.card{
+  padding:20rpx 25rpx;
+  width: 540rpx;
+  box-sizing: border-box;
+  
+}
+.current{
+  padding:0rpx 25rpx;
+  padding-bottom:6rpx;
+}
+.box{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0rpx 1rpx 6rpx #B9D8FF;
+}
+.box .content{
+  padding:20% 8%;
+  width: 100%;
+  height: 84%;
+  box-sizing: border-box;
+}
+.box .timeInfo{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #fff;
+  padding-left:30rpx ;
+  width: 100%;
+  height: 16%;
+}
+.planItem{
+  display: flex;
+  color:#fff;
+  font-size: 32rpx;
+  line-height: 200%;
+}
+.current .planItem{
+  font-size: 34rpx;
+}
+.box .iconfont:before{
+  font-size: 46rpx;
+}
+.add{
+  position: fixed;
+  bottom:50rpx;
+  right: 40rpx;
+  width: 88rpx;
+  height: 88rpx;
+  border-radius: 50%;
+  box-shadow: 0rpx 0rpx 12rpx #B9D8FF;
+  text-align: center;
+  line-height: 88rpx;
+  background-color: #fff;
+  color:#B9D8FF;
+  font-size: 50rpx;
+  line-height: 88rpx;
+}
